src/objects/EAVEstimatorRule__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Electricity_Units__c</fullName>
        <label>Electricity Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gas_Units__c</fullName>
        <label>Gas Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sorting_Order__c</fullName>
        <label>Sorting Order</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>image1__c</fullName>
        <label>image1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>image2__c</fullName>
        <label>image2</label>
        <type>Url</type>
    </fields>
    <label>EAV Estimator Rule</label>
</CustomObject>